libraries/TM/src/TM_OLED_Class_GP1a-error.txt
In file included from arduino-sensorics\0_arduino_code\0_arduino_code.ino:34:0:
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:71:1: error: invalid use of template-name 'TM_OLED_Class' without an argument list
 TM_OLED_Class::TM_OLED_Class() : TM_Device_Class(), my_u8g2(U8G2_R0, /* reset=*/U8X8_PIN_NONE)
 ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:77:6: error: 'template<class U8G2, int x, int y> class TM_OLED_Class' used without template parameters
 void TM_OLED_Class::init()
      ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h: In function 'void init()':
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:79:3: error: 'my_u8g2' was not declared in this scope
   my_u8g2.begin();
   ^
In file included from arduino-sensorics\0_arduino_code\0_arduino_code.ino:34:0:
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h: At global scope:
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:93:6: error: 'template<class U8G2, int x, int y> class TM_OLED_Class' used without template parameters
 void TM_OLED_Class::drawStr(const char *text)
      ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h: In function 'void drawStr(const char*)':
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:96:3: error: 'my_u8g2' was not declared in this scope
   my_u8g2.clearBuffer();
   ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h: At global scope:
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:102:6: error: 'template<class U8G2, int x, int y> class TM_OLED_Class' used without template parameters
 void TM_OLED_Class::drawInt(const unsigned int value)
      ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h: In function 'void drawInt(unsigned int)':
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:117:3: error: 'my_u8g2' was not declared in this scope
   my_u8g2.clearBuffer();
   ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h: At global scope:
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:123:6: error: 'template<class U8G2, int x, int y> class TM_OLED_Class' used without template parameters
 void TM_OLED_Class::setBarchartRange(const float min, const float max)
      ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h: In function 'void setBarchartRange(float, float)':
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:125:3: error: 'barchart_min' was not declared in this scope
   barchart_min = min;
   ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:126:3: error: 'barchart_max' was not declared in this scope
   barchart_max = max;
   ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h: At global scope:
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:130:6: error: 'template<class U8G2, int x, int y> class TM_OLED_Class' used without template parameters
 void TM_OLED_Class::drawBarchart(const float value_to_append)
      ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h: In function 'void drawBarchart(float)':
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:134:26: error: 'barchart_min' was not declared in this scope
   if (value_to_append <= barchart_min)
                          ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:139:31: error: 'barchart_max' was not declared in this scope
   else if (value_to_append >= barchart_max)
                               ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:160:5: error: 'barchart_data' was not declared in this scope
     barchart_data[i] = barchart_data[i + 1];
     ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:164:3: error: 'barchart_data' was not declared in this scope
   barchart_data[px_x - 1] = value_to_append_px;
   ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:168:3: error: 'my_u8g2' was not declared in this scope
   my_u8g2.clearBuffer();
   ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h: At global scope:
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:178:6: error: 'template<class U8G2, int x, int y> class TM_OLED_Class' used without template parameters
 void TM_OLED_Class::drawAltBarchartOrInt(const float value_to_append)
      ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h: In function 'void drawAltBarchartOrInt(float)':
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:188:7: error: 'last_was_barchart' was not declared in this scope
   if (last_was_barchart)
       ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:191:28: error: no matching function for call to 'drawInt(const float&)'
     drawInt(value_to_append);
                            ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:102:6: note: candidate: template<class U8G2, int px_x, int px_y> void drawInt(unsigned int)
 void TM_OLED_Class::drawInt(const unsigned int value)
      ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:102:6: note:   template argument deduction/substitution failed:
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:191:28: note:   couldn't deduce template parameter 'U8G2'
     drawInt(value_to_append);
                            ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:196:33: error: no matching function for call to 'drawBarchart(const float&)'
     drawBarchart(value_to_append);
                                 ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:130:6: note: candidate: template<class U8G2, int px_x, int px_y> void drawBarchart(float)
 void TM_OLED_Class::drawBarchart(const float value_to_append)
      ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:130:6: note:   template argument deduction/substitution failed:
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:196:33: note:   couldn't deduce template parameter 'U8G2'
     drawBarchart(value_to_append);
                                 ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h: At global scope:
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:201:6: error: 'template<class U8G2, int x, int y> class TM_OLED_Class' used without template parameters
 void TM_OLED_Class::drawFrame()
      ^
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h: In function 'void drawFrame()':
arduino-sensorics\libraries\TM\src/TM_OLED_Class.h:204:3: error: 'my_u8g2' was not declared in this scope
   my_u8g2.clearBuffer();
   ^
arduino-sensorics\0_arduino_code\0_arduino_code.ino: In function 'void loop()':
0_arduino_code:111:11: error: 'class TM_OLED_Class<U8G2_SSD1306_128X64_NONAME_F_HW_I2C, 128, 64>' has no member named 'ensure_wake'
   my_oled.ensure_wake();
           ^
0_arduino_code:114:11: error: 'class TM_OLED_Class<U8G2_SSD1306_128X64_NONAME_F_HW_I2C, 128, 64>' has no member named 'ensure_sleep'
   my_oled.ensure_sleep();
           ^
exit status 1
'class TM_OLED_Class<U8G2_SSD1306_128X64_NONAME_F_HW_I2C, 128, 64>' has no member named 'ensure_wake'
